EA-109 | Fix for duplication of disposition obs group on edit and add profile for running tests against openmrs2.0